--- a/LockiproTest/LockiproTest.csproj
+++ b/LockiproTest/LockiproTest.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="konva.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
