--- a/LockiproTest/LockiproTest.csproj
+++ b/LockiproTest/LockiproTest.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="konva.js" />
+    <Content Include="NumFirmantes.aspx" />
     <Content Include="Pruebas.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -79,6 +80,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="NumFirmantes.aspx.cs">
+      <DependentUpon>NumFirmantes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NumFirmantes.aspx.designer.cs">
+      <DependentUpon>NumFirmantes.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pruebas.aspx.cs">
