change method create properties form from class rect

--- a/LockiproTest/LockiproTest.csproj
+++ b/LockiproTest/LockiproTest.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="img\firma" />
     <Content Include="Plantilla.aspx" />
     <Content Include="Firmar.aspx" />
     <Content Include="img\logo.png" />
